# GraspGenX

./: .gitignore  README.md  SKILL.md  pyproject.toml
client-server/: README.md  graspgenx_client.py  graspgenx_server.py
docs/: g1_dex3_end2end.md  uv_inference_setup.md
end2end/: amo_control.py  build_g1_dex3.py  dynamic_playback.py  e2e_grasp_demo.py  paths.py  render_trajectory_mp4.py  robot_profiles.py  scene_builder.py  tasks.py
end2end/envs/: g1_tabletop_demo.yaml
end2end/robots/: g1_dex3.yaml
end2end/robots/g1/: g1_body29_hand14.xml
graspgenx/: _setup_dependencies.py  grasp_server.py  x_grippers.py
graspgenx/models/: discriminator.py  generator.py  tensorrt_utils.py
graspgenx/models/ptv3/: ptv3_vanilla.py
graspgenx/samplers/: graspmoe.py  planner.py
graspgenx/serving/: __init__.py  types.py  zmq_client.py  zmq_server.py
graspgenx/utils/: scene_loaders.py
mcp/: README.md  pyproject.toml
mcp/src/mcp_server_graspgenx/: __init__.py  __main__.py  server.py
scripts/: batch_inference_scene.py  demo_object_pc.py  demo_scene_pc.py  gripper_config_wizard.py  visualize_saved_grasps.py
tests/: test_discriminator_embedding_cache.py  test_gpu_obb.py  test_inference_tensorrt.py  test_precision_parity.py  test_tensorrt_benchmark.py  test_tensorrt_diffusion_head.py
