[build-system]
requires = ["setuptools>=45,<78", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "graspgenx"
version = "1.0.0"
description = "GraspGenX: Cross-Embodiment Diffusion-based 6-DOF Grasp Generation"
authors = [
    {name = "Adithya Murali", email = "admurali@nvidia.com"},
]
maintainers = [
    {name = "Adithya Murali", email = "admurali@nvidia.com"},
]
license = {text = "NVIDIA Corporation"}
readme = "README.md"
requires-python = ">=3.10"
keywords = ["robotics", "manipulation", "learning", "computer-vision", "grasping", "cross-embodiment"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core PyTorch dependencies. Floor pin only — we verified the codebase
    # runs on torch 2.7 (NGC pytorch:25.03 base) as well as 2.1.0, so we
    # don't lock to a single version. Python 3.12 support requires torch
    # >=2.2 (no cp312 wheel for 2.1.0). Cap at <2.7 because torch >=2.7
    # only ships cu126/cu128/cu130 wheels — none are forward-compatible
    # with the local 560.x driver. Combined with the cu124 index pin under
    # [tool.uv.sources], this gives us a build that works on both this
    # workstation and on the cluster.
    "torch>=2.1,<2.7",
    "torchvision>=0.16,<0.22",

    # PyTorch Geometric (pure-Python meta package). The CUDA companion
    # wheels (torch-scatter / torch-cluster) are no longer dependencies.
    "torch-geometric",

    # Core dependencies
    "h5py",
    "hydra-core",
    "matplotlib",
    "numpy==1.26.4",
    "webdataset",
    "scikit-learn",
    "scipy",
    "tensorboard",
    "trimesh==4.5.3",
    "transformers",
    "tensordict",
    "diffusers==0.11.1",
    "timm==1.0.15",
    "huggingface-hub==0.25.2",
    "PyOpenGL==3.1.5",
    "addict",
    # spconv-cu120 has no cp312 wheel and the ptv3vanilla backbone is a
    # pure-PyTorch implementation that doesn't need it. Re-add for the
    # original spconv-based PTv3 backbone if/when you need it on <=3.11.
    "yapf==0.40.1",
    "tensorboardx",
    "sharedarray",
    "yourdfpy==0.0.56",
    "urdfpy",

    # Additional dependencies
    "pyrender",
    "scene-synthesizer[recommend]",
    "imageio",
    "viser",
    "tqdm",
    "pyyaml",
    "pytest",

    # Pin setuptools to a version that still includes pkg_resources
    # (required by torch.cpp_extension for building CUDA extensions like
    # pointnet2_ops on older torch versions).
    "setuptools>=45,<78",

    # NOTE: the end-to-end pick-and-place pipeline (end2end/) needs a heavier
    # sim + motion-planning stack (cuRobo, Newton, MuJoCo, CoACD, USD, fcl).
    # Those are NOT part of the base inference install — they live in the
    # optional `end2end` extra below. Install them with:
    #     uv sync --extra end2end        (or:  uv pip install -e ".[end2end]")
]

[project.urls]
"Homepage" = "https://graspgenx.github.io"
"Repository" = "https://github.com/NVlabs/GraspGenX"
"Documentation" = "https://graspgenx.github.io"

[project.optional-dependencies]
# End-to-end pick-and-place pipeline (end2end/): GraspGenX -> cuRobo motion
# planning -> Newton/MuJoCo dynamic playback -> MP4 render / USD export.
# Install with: uv sync --extra end2end
# NOTE: nvidia-curobo and newton resolve to sibling editable checkouts via
# [tool.uv.sources] (../curobo, ../newton) — those repos must be present.
end2end = [
    "nvidia-curobo",          # motion planning (editable sibling checkout)
    "cuda-core[cu12]<1.0",    # cuRobo cuda.core JIT backend
    "newton[sim]",            # physics sim (editable sibling checkout); pulls warp
    "mujoco-warp==3.5.0.2",   # SolverMuJoCo backend (pinned: 3.8 broke geom_dataid)
    "mujoco==3.5.0",          # matching enum API
    "coacd>=1.0.7",           # convex decomposition for object/gripper collision
    "usd-core",               # USD export (export_trajectory_usd.py)
    "python-fcl",             # mesh-vs-scene collision checks (grasp filtering/viz)
]
dev = [
    "black",
    "isort",
    "flake8",
]
serve = [
    "pyzmq",
    "msgpack",
    "msgpack-numpy",
]
# TensorRT acceleration for the diffusion denoiser (opt-in). Versions match the
# installed torch==2.6.0+cu124. Install with: uv sync --extra tensorrt
tensorrt = [
    "torch-tensorrt>=2.6,<2.7",
    "tensorrt>=10,<11",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["graspgenx*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.json", "*.txt", "*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests requiring a live GraspGenX server or GPU",
    "end2end: slow end-to-end pick-and-place demos (GPU + cuRobo + Newton)",
    "tensorrt: tests requiring TensorRT (GPU + torch_tensorrt); opt-in extra",
]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88

[tool.uv]
# Allow pre-release packages (needed for pyrender -> pyglet dependencies)
prerelease = "allow"

# Auto-detect the local NVIDIA driver and pick a matching torch wheel
# (e.g. cu126 for driver 560.x, cu130 for driver 580.x+). Avoids hardcoding
# a CUDA build that would break for users on different driver versions.
torch-backend = "auto"

# Build dependencies for packages that need special build requirements
[tool.uv.extra-build-dependencies]
sharedarray = ["setuptools>=45,<78"]
