[project]
name = "mcp-server-graspgenx"
version = "0.1.0"
description = "A Model Context Protocol server for GraspGenX cross-embodiment 6-DOF robotic grasp generation"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "NVIDIA Corporation" }]
keywords = ["mcp", "robotics", "grasping", "graspgen", "graspgenx", "cross-embodiment", "llm"]
license = { text = "Apache-2.0" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "mcp>=1.1.3",
    "pyzmq>=25.0.0",
    "msgpack>=1.0.0",
    "msgpack-numpy>=0.4.8",
    "numpy>=1.24.0",
    "trimesh>=4.0.0",
    "pydantic>=2.0.0",
    "viser>=1.0.0",
]

[project.scripts]
mcp-server-graspgenx = "mcp_server_graspgenx:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server_graspgenx"]

[tool.uv]
dev-dependencies = ["pyright>=1.1.389", "ruff>=0.7.3"]
